plotted monthly change in revenue by customer using plotly and ggplot

--- a/ar_seasonal_trends.Rmd
+++ b/ar_seasonal_trends.Rmd
@@ -9,6 +9,7 @@ library(DBI)
 library(RPostgres)
 library(tidyverse)
 library(lubridate)
+library(plotly)
 ```
 
 set up connection to postgres
@@ -80,9 +81,71 @@ top20_customers_2024 <- customers |>
   head(20)
 ```
 
+2023 & 2024
+```{r}
+top20_customers_total <- customers |> 
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |> 
+  group_by(omp_customer_organization_id) |> 
+  mutate(omp_order_date = year(omp_order_date)) |> 
+  summarise(generated_revenue_2023 = sum(omp_order_total_base)) |> 
+  rename(customer_id = omp_customer_organization_id) |> 
+  arrange(desc(generated_revenue_2023)) |> 
+  select(customer_id) |> 
+  head(20)
+```
 
+look at order total by month for each of top20 customers in 2023. Using plotly for interactivity. 
+```{r}
+p <- customers |> 
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |> 
+  mutate(month = month(omp_order_date), year = year(omp_order_date)) |> 
+  rename(customer_id = omp_customer_organization_id, generated_revenue = omp_order_total_base) |> 
+  filter(year == 2023, customer_id %in% top20_customers_2023$customer_id) |> 
+  group_by(customer_id, month) |> 
+  summarise(generated_revenue = sum(generated_revenue), .groups = 'drop') |> 
+  mutate(customer_id = factor(customer_id, levels = top20_customers_2023$customer_id)) |> 
+  ggplot(aes(x=month, y=generated_revenue, color=customer_id)) +
+  geom_line() +
+  scale_x_continuous(
+    breaks = seq_along(month.name),
+    labels = month.name 
+  ) +
+  labs(
+    title = "Change in Customer Generated Revenue 2023",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  ) 
+ggplotly(p)
+```
 
-
+ggplot version for displaying inline better.
+```{r, fig.width=10}
+customers |> 
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |> 
+  mutate(month = month(omp_order_date), year = year(omp_order_date)) |> 
+  rename(customer_id = omp_customer_organization_id, generated_revenue = omp_order_total_base) |> 
+  filter(year == 2023, customer_id %in% top20_customers_2023$customer_id) |> 
+  group_by(customer_id, month) |> 
+  summarise(generated_revenue = sum(generated_revenue), .groups = 'drop') |> 
+  mutate(customer_id = factor(customer_id, levels = top20_customers_2023$customer_id)) |> 
+  ggplot(aes(x=month, y=generated_revenue, color=customer_id)) +
+  geom_line() +
+  scale_x_continuous(
+    breaks = seq_along(month.name),
+    labels = month.name 
+  ) +
+  labs(
+    title = "Change in Customer Generated Revenue 2023",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  ) 
+```
 
 
 
