--- a/ar_seasonal_trends.Rmd
+++ b/ar_seasonal_trends.Rmd
@@ -97,7 +97,7 @@ top20_customers_total <- customers |>
 
 ## monthly change by customer, 2023
 Using plotly for interactivity. 
-```{r}
+```{r, out.width='100%'}
 p <- customers |> 
   select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |> 
   mutate(month = month(omp_order_date), year = year(omp_order_date)) |> 
@@ -117,6 +117,7 @@ p <- customers |>
     x = "Month",
     y = "Revenue ($)"
   ) +
+  theme_minimal() +
   theme(
     axis.text.x = element_text(angle = 55, hjust = 1)
   ) 
@@ -144,6 +145,7 @@ customers |>
     x = "Month",
     y = "Revenue ($)"
   ) +
+  theme_minimal() +
   theme(
     axis.text.x = element_text(angle = 55, hjust = 1)
   ) 
@@ -171,6 +173,7 @@ p <- customers |>
     x = "Month",
     y = "Revenue ($)"
   ) +
+  theme_minimal() +
   theme(
     axis.text.x = element_text(angle = 55, hjust = 1)
   ) 
@@ -198,11 +201,75 @@ customers |>
     x = "Month",
     y = "Revenue ($)"
   ) +
+  theme_minimal() +
   theme(
     axis.text.x = element_text(angle = 55, hjust = 1)
   ) 
 
 ```
+
+2023 + 2024
+```{r}
+p <- customers |> 
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |> 
+  mutate(month = month(omp_order_date), 
+         year = year(omp_order_date),
+         month_year = make_date(year, month)) |> # Create a date object for proper ordering
+  rename(customer_id = omp_customer_organization_id, generated_revenue = omp_order_total_base) |> 
+  filter(customer_id %in% top20_customers_total$customer_id) |> 
+  group_by(customer_id, month_year) |> # Group by month_year
+  summarise(generated_revenue = sum(generated_revenue), .groups = 'drop') |> 
+  mutate(customer_id = factor(customer_id, levels = top20_customers_total$customer_id)) |> 
+  ggplot(aes(x = month_year, y = generated_revenue, color = customer_id)) +
+  geom_line() +
+  scale_x_date(date_breaks = "1 month", date_labels = "%b %Y") + # Format x-axis
+  labs(
+    title = "Change in Customer Generated Revenue 2023 + 2024",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
+
+ggplotly(p)
+
+
+```
+
+ggplot for inline visibility
+```{r, fig.width=10}
+customers |> 
+  select(omp_order_date, omp_customer_organization_id, omp_order_total_base) |> 
+  mutate(month = month(omp_order_date), 
+         year = year(omp_order_date),
+         month_year = make_date(year, month)) |> # Create a date object for proper ordering
+  rename(customer_id = omp_customer_organization_id, generated_revenue = omp_order_total_base) |> 
+  filter(customer_id %in% top20_customers_total$customer_id) |> 
+  group_by(customer_id, month_year) |> # Group by month_year
+  summarise(generated_revenue = sum(generated_revenue), .groups = 'drop') |> 
+  mutate(customer_id = factor(customer_id, levels = top20_customers_total$customer_id)) |> 
+  ggplot(aes(x = month_year, y = generated_revenue, color = customer_id)) +
+  geom_line() +
+  scale_x_date(date_breaks = "1 month", date_labels = "%b %Y") + # Format x-axis
+  labs(
+    title = "Change in Customer Generated Revenue 2023 + 2024",
+    x = "Month",
+    y = "Revenue ($)"
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_text(angle = 55, hjust = 1)
+  )
+```
+
+
+
+
+
+
+
 
 
 
